feat(tool): 新增工具方法

--- a/packages/lodash/package.json
+++ b/packages/lodash/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@jeffery/editor",
+  "name": "@jeffery/lodash",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
@@ -7,11 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "type": "module",
   "keywords": [],
-  "author": "JefferyXZF",
-  "license": "ISC",
-  "dependencies": {
-    "@jeffery/shared": "workspace:^"
-  }
+  "author": "",
+  "license": "ISC"
 }
