--- a/package.json
+++ b/package.json
@@ -16,9 +16,14 @@
   },
   "dependencies": {
     "@jeffery/editor": "workspace:^",
+    "@jeffery/lodash": "workspace:^",
     "antd": "^5.6.4",
+    "axios": "^1.4.0",
+    "classnames": "^2.3.2",
+    "immer": "^10.0.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "-": "^0.0.1",
@@ -57,6 +62,7 @@
     "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-stylelint": "^4.3.0",
     "vite-plugin-windicss": "^1.9.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "windicss": "^3.5.6"
   },
   "workspaces": [
